# rust-wgpu-practice

./: Cargo.toml  build.rs  index.html
src/: lib.rs  model.rs  resources.rs  shader.wgsl  texture.rs
